StudentControllerで、レスポンスがStringでなくJSONになるように実装しました。/StudentServiceで、独自の例外を設定しました。